[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=3.0",
    "packaging>=23"
]

build-backend = "scikit_build_core.build"

[project]
name = "HASEonGPU"
version = "0.1.0"
description = "Python bindings for HASEonGPU"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Carlchristian Eckert"}, {name="Tobias Hänel"}, {name= "Dr. Daniel Albach"}, {name="Tim Hanel" }
]
dependencies=[
    "pytest",
    "scikit-build-core>=0.10",
    "gmsh",
    "numpy",
    "scipy",
    "numba",
    "vtk",
    "matplotlib",
    "pyyaml",
]
[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["HASEonGPU_Bindings", "pyInclude"]

[[tool.scikit-build.generate]]
path = "HASEonGPU.py"
template = """
import HASEonGPU_Bindings
from HASEonGPU_Bindings import *
from pyInclude import *
del HASEonGPU_Bindings.HostMesh
"""

[tool.scikit-build.cmake]
build-type = "Release"
[tool.scikit-build.cmake.define]
HASE_ENABLE_PYTHON = "ON"
HASE_BUILD_RELEASE = "ON"
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "OFF"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that invoke external binaries or full example scripts",
]
