[build-system]
requires = [
    "scikit-build-core>=0.10",
    "packaging>=23"
]

build-backend = "scikit_build_core.build"

[project]
name = "HASEonGPU"
version = "2.0.2"
description = "Python frontend and compiled C++ backend for HASEonGPU ASE simulations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Carlchristian Eckert"}, {name="Tobias Hänel"}, {name= "Dr. Daniel Albach"}, {name="Tim Hanel" }
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies=[
    "gmsh",
    "numpy",
    "scipy",
    "numba",
    "vtk",
    "matplotlib",
    "pyyaml",
    "openpmd-api",
]

[project.optional-dependencies]
build = [
    "scikit-build-core>=0.10",
]
test = [
    "pytest",
]
dev = [
    "scikit-build-core>=0.10",
    "pytest",
]

[project.urls]
Documentation = "https://haseongpu.readthedocs.io/en/latest/"
Repository = "https://github.com/computationalradiationphysics/haseongpu"
Issues = "https://github.com/computationalradiationphysics/haseongpu/issues"
Changelog = "https://github.com/computationalradiationphysics/haseongpu/releases"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["HASEonGPU_Bindings", "pyInclude"]

[[tool.scikit-build.generate]]
path = "HASEonGPU.py"
template = """
__version__ = "2.0.2"
import HASEonGPU_Bindings
from HASEonGPU_Bindings import *
from pyInclude import *
for _name in ("HostMesh", "ExperimentParameters", "ComputeParameters", "Mesh", "calcPhiASE"):
    globals().pop(_name, None)
del _name
if hasattr(HASEonGPU_Bindings, "HostMesh"):
    del HASEonGPU_Bindings.HostMesh
"""

[tool.scikit-build.cmake]
build-type = "Release"
[tool.scikit-build.cmake.define]
HASE_ENABLE_PYTHON = "ON"
HASE_BUILD_RELEASE = "ON"
HASE_NATIVE_OPTIMIZATIONS = "OFF"
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "OFF"
CMAKE_BUILD_RPATH_USE_ORIGIN = "ON"
CMAKE_INSTALL_RPATH = "$ORIGIN;$ORIGIN/../lib"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "ON"

[tool.pytest.ini_options]
markers = [
    "integration: tests that invoke external binaries or full example scripts",
]
